Fix padding issue with logo on small devices

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -31,6 +31,7 @@ aside {
 nav {
 	.navbar-brand {
 		padding-top: 20px;
+	    	padding-left: 0;
 	}
 
 	@media (max-width: 320px) {
